--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "accountKeeper",
+  "name": "cardManager",
   "version": "1.0.0",
   "description": "Credit card Manager App",
   "main": "server.js",
@@ -8,10 +8,11 @@
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
-  "author": "",
+  "author": "akin odeku",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
